--- a/.editorconfig
+++ b/.editorconfig
@@ -1,16 +1,13 @@
-# Editor configuration - http://editorconfig.org
+# editorconfig.org
+
 root = true
 
 [*]
 charset = utf-8
-end_of_line = lf
 indent_size = 2
 indent_style = space
 insert_final_newline = true
-max_line_length = 140
 trim_trailing_whitespace = true
 
 [*.md]
-max_line_length = off
 trim_trailing_whitespace = false
-
