--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,7 +1,5 @@
 {
   "extends": "stylelint-config-standard",
-  "plugins": [],
-  "ignoreFiles": [],
   "rules": {
     "at-rule-empty-line-before": [
       "always",
@@ -25,9 +23,7 @@
     "font-family-name-quotes": "always-where-recommended",
     "function-name-case": [
       "lower",
-      {
-        "ignoreFunctions": []
-      }
+      {}
     ],
     "function-url-quotes": "always",
     "max-empty-lines": 2,
@@ -43,11 +39,17 @@
     "selector-pseudo-element-colon-notation": "double",
     "selector-pseudo-element-no-unknown": [
       true,
-      {
-        "ignorePseudoElements": []
-      }
+      {}
     ],
     "selector-type-no-unknown": null,
+    "property-no-unknown": [
+      true,
+      {
+        "ignoreProperties": [
+          "place-items"
+        ]
+      }
+    ],
     "string-quotes": "double",
     "value-keyword-case": [
       "lower",
