--- a/.htmlhintrc
+++ b/.htmlhintrc
@@ -1,24 +1,24 @@
 {
-  "tagname-lowercase": true,
+  "alt-require": true,
   "attr-lowercase": true,
+  "attr-no-duplication": true,
+  "attr-unsafe-chars": true,
   "attr-value-double-quotes": true,
   "attr-value-not-empty": false,
-  "attr-no-duplication": true,
   "doctype-first": false,
+  "doctype-html5": true,
+  "href-abs-or-rel": false,
+  "id-class-ad-disabled": false,
+  "id-class-value": "dash",
+  "id-unique": true,
+  "inline-script-disabled": false,
+  "inline-style-disabled": false,
+  "space-tab-mixed-disabled": "space",
+  "spec-char-escape": true,
+  "src-not-empty": true,
+  "style-disabled": false,
   "tag-pair": true,
   "tag-self-close": false,
-  "spec-char-escape": true,
-  "id-unique": true,
-  "src-not-empty": true,
-  "title-require": true,
-  "alt-require": true,
-  "doctype-html5": true,
-  "id-class-value": "dash",
-  "style-disabled": false,
-  "inline-style-disabled": false,
-  "inline-script-disabled": false,
-  "space-tab-mixed-disabled": "space",
-  "id-class-ad-disabled": false,
-  "href-abs-or-rel": false,
-  "attr-unsafe-chars": true
+  "tagname-lowercase": true,
+  "title-require": true
 }
