--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,5 @@
 {
-  "bracketSpacing": true,
-  "singleQuote": true,
-  "useTabs": false,
-  "tabWidth": 2,
   "printWidth": 140,
-  "trailingComma": "all",
-  "arrowParens": "always"
+  "tabWidth": 2,
+  "useTabs": false
 }
