--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "project:update": "npm run project:clean && npm update"
   },
   "dependencies": {
-    "flow-typed": "^3.2.1"
+    "flow-typed": "^3.2.1",
+    "prettier": "^2.1.2"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
+    "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-flowtype": "^4.7.0",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "flow-bin": "^0.119.1",
     "stylelint": "^13.6.1",
     "stylelint-config-standard": "^20.0.0"
