--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
     "SharedArrayBuffer": "readonly"
   },
   "rules": {
+    "no-bitwise": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
@@ -24,10 +25,6 @@
       }
     ],
     "import/no-unresolved": "error",
-    "max-len": "off",
-    "no-console": "off",
-    "no-unused-vars": "off",
-    "space-in-parens": "off",
     "prettier/prettier": [
       "error"
     ]
