--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
   "printWidth": 140,
   "tabWidth": 2,
-  "useTabs": false
+  "useTabs": false,
+  "singleQuote": true,
+  "semi": true,
+  "trailingComma": "all"
 }
