--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
     "project:install": "npm run project:clean && npm install",
     "project:update": "npm run project:clean && npm update"
   },
-  "dependencies": {
-    "flow-typed": "^3.2.1",
-    "prettier": "^2.1.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -24,7 +21,12 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "flow-bin": "^0.119.1",
+    "flow-typed": "^3.2.1",
+    "htmlhint": "^0.14.1",
+    "prettier": "^2.1.2",
+    "prettier-eslint": "^11.0.0",
     "stylelint": "^13.6.1",
+    "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0"
   },
   "eslintConfig": {
