--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,8 @@
 {
-  "editor.fontFamily": "Fira Code, Dank Mono, Operator Mono, Fira Code, Inconsolata, Menlo",
-  "editor.fontLigatures": true,
-  "editor.fontSize": 13,
-  "editor.lineHeight": 25,
-  "editor.letterSpacing": 0.5,
-  "editor.wordWrap": "off",
-  "editor.renderWhitespace": "all",
-  "editor.tabCompletion": "on",
-  "editor.tabSize": 2,
-  "editor.cursorBlinking": "smooth",
-  "editor.cursorStyle": "line",
-  "editor.cursorSmoothCaretAnimation": true,
-  "editor.detectIndentation": true,
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
   "editor.formatOnType": false,
+  "editor.detectIndentation": false,
   "editor.insertSpaces": false,
   "editor.useTabStops": false,
   "files.trimFinalNewlines": true,
@@ -28,7 +16,6 @@
   "scss.validate": false,
   "javascript.validate.enable": false,
   "javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyParenthesis": true,
-  "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyParenthesis": true,
   "stylelint.enable": true,
   "flow.pathToFlow": "${workspaceRoot}/node_modules/.bin/flow",
   "htmlhint.documentSelector": [
