--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,8 +1,2 @@
-# npx browserslist
-# https://github.com/browserslist/browserslist#queries
-
-> 0.5%
-last 2 versions
-not dead
-not IE 9-11
-not op_mini all
+> 1%
+last 1 version
