--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "main": "src/index.html",
   "private": true,
   "scripts": {
-    "project:clean": "rm -rf node_modules",
-    "project:install": "npm run project:clean && npm install",
-    "project:update": "npm run project:clean && npm update"
+    "project:clean": "rm -rf node_modules"
   },
   "dependencies": {},
   "devDependencies": {
