--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,8 @@
     "dbaeumer.vscode-eslint",
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
+    "flowtype.flow-for-vscode",
+    "mkaufman.htmlhint",
     "stylelint.vscode-stylelint"
   ]
 }
