--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,14 @@
   "compilerOptions": {
     "baseUrl": "src",
     "target": "es2020",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "typeRoots": ["node_modules/@types"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "declaration": false,
@@ -23,5 +29,7 @@
     "sourceMap": true,
     "strict": true
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
