--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,13 @@
 {
-  "extends": ["airbnb", "prettier", "plugin:prettier/recommended"],
-  "plugins": ["import", "prettier"],
+  "extends": [
+    "airbnb",
+    "prettier",
+    "plugin:prettier/recommended"
+  ],
+  "plugins": [
+    "import",
+    "prettier"
+  ],
   "env": {
     "browser": true,
     "es6": true
@@ -19,15 +26,22 @@
       }
     ],
     "import/no-unresolved": "error",
-    "prettier/prettier": ["error"]
+    "prettier/prettier": [
+      "error"
+    ]
   },
   "settings": {
-    "import/extensions": [".js"],
+    "import/extensions": [
+      ".js"
+    ],
     "import/parsers": {},
     "import/resolver": {
       "node": {
         "extensions": [],
-        "moduleDirectory": ["node_modules", "src"]
+        "moduleDirectory": [
+          "node_modules",
+          "src"
+        ]
       }
     }
   }
