--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,42 +1,44 @@
 {
-  "editor.formatOnPaste": true,
-  "editor.formatOnSave": true,
-  "editor.formatOnType": false,
-  "editor.detectIndentation": false,
-  "editor.insertSpaces": false,
-  "editor.useTabStops": false,
-  "files.trimFinalNewlines": true,
-  "files.trimTrailingWhitespace": true,
-  "files.associations": {
-    ".*intrc": "json"
-  },
-  "css.validate": false,
-  "json.format.enable": true,
-  "less.validate": false,
-  "javascript.validate.enable": false,
-  "scss.validate": false,
-  "stylelint.enable": true,
-  "flow.pathToFlow": "${workspaceRoot}/node_modules/.bin/flow",
-  "htmlhint.documentSelector": ["html"],
-  "[html]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[json]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[markdown]": {
-    "editor.acceptSuggestionOnEnter": "off"
-  },
-  "[scss]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.codeActionsOnSave": {
-      "source.fixAll.stylelint": true
-    }
-  },
-  "[typescript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": true
-    }
-  }
+	"editor.formatOnPaste": true,
+	"editor.formatOnSave": true,
+	"editor.formatOnType": false,
+	"editor.detectIndentation": false,
+	"editor.insertSpaces": false,
+	"editor.useTabStops": false,
+	"files.trimFinalNewlines": true,
+	"files.trimTrailingWhitespace": true,
+	"files.associations": {
+		".*intrc": "json"
+	},
+	"css.validate": false,
+	"json.format.enable": true,
+	"less.validate": false,
+	"javascript.validate.enable": false,
+	"scss.validate": false,
+	"stylelint.enable": true,
+	"flow.pathToFlow": "${workspaceRoot}/node_modules/.bin/flow",
+	"htmlhint.documentSelector": [
+		"html"
+	],
+	"[html]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[json]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[markdown]": {
+		"editor.acceptSuggestionOnEnter": "off"
+	},
+	"[scss]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode",
+		"editor.codeActionsOnSave": {
+			"source.fixAll.stylelint": true
+		}
+	},
+	"[typescript]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode",
+		"editor.codeActionsOnSave": {
+			"source.fixAll.eslint": true
+		}
+	}
 }
