--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "main": "src/index.html",
   "private": true,
   "scripts": {
-    "start": "npx serve -s build/",
+    "start:dev": "npx serve -s src/",
+    "start:live": "npx serve -s build/",
     "lint:ts": "npx flow",
     "lint:scss": "npx stylelint \"src/**/*.scss\" --syntax scss",
     "test:jest": "npx jest",
@@ -40,7 +41,10 @@
     "stylelint": "^13.6.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
+    "stylelint-scss": "^3.18.0",
     "tslib": "^2.0.1",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "webpack": "^5.0.0",
+    "webpack-cli": "^4.0.0"
   }
 }
