--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,28 +1,13 @@
 {
-  "extends": [
-    "stylelint-config-standard",
-    "stylelint-config-prettier"
-  ],
-  "plugins": [
-    "stylelint-scss"
-  ],
-  "ignoreFiles": [
-    "dist/**/*.css"
-  ],
+  "extends": ["stylelint-config-standard", "stylelint-config-prettier"],
+  "plugins": ["stylelint-scss"],
+  "ignoreFiles": ["dist/**/*.css"],
   "rules": {
     "at-rule-empty-line-before": [
       "always",
       {
-        "ignore": [
-          "after-comment",
-          "first-nested"
-        ],
-        "ignoreAtRules": [
-          "else",
-          "for",
-          "if",
-          "import"
-        ]
+        "ignore": ["after-comment", "first-nested"],
+        "ignoreAtRules": ["else", "for", "if", "import"]
       }
     ],
     "at-rule-no-unknown": null,
@@ -30,32 +15,22 @@
     "color-named": "never",
     "declaration-no-important": true,
     "font-family-name-quotes": "always-where-recommended",
-    "function-name-case": [
-      "lower",
-      {}
-    ],
+    "function-name-case": ["lower", {}],
     "function-url-quotes": "always",
     "max-empty-lines": 2,
     "max-nesting-depth": 4,
     "media-feature-name-no-unknown": [
       true,
       {
-        "ignoreMediaFeatureNames": [
-          "min-device-pixel-ratio"
-        ]
+        "ignoreMediaFeatureNames": ["min-device-pixel-ratio"]
       }
     ],
     "selector-pseudo-element-colon-notation": "double",
-    "selector-pseudo-element-no-unknown": [
-      true,
-      {}
-    ],
+    "selector-pseudo-element-no-unknown": [true, {}],
     "property-no-unknown": [
       true,
       {
-        "ignoreProperties": [
-          "place-items"
-        ]
+        "ignoreProperties": ["place-items"]
       }
     ],
     "selector-type-no-unknown": null,
@@ -63,9 +38,7 @@
     "value-keyword-case": [
       "lower",
       {
-        "ignoreProperties": [
-          "/font-?family/i"
-        ]
+        "ignoreProperties": ["/font-?family/i"]
       }
     ],
     "scss/at-extend-no-missing-placeholder": true,
