--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "outDir": "./dist/",
     "baseUrl": "src",
-    "target": "es2020",
+    "module": "esnext",
+    "target": "es5",
     "lib": [
       "dom",
       "dom.iterable",
@@ -20,9 +22,9 @@
     "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
     "isolatedModules": true,
-    "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
+    "noImplicitAny": true,
     "removeComments": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
