--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "license": "MIT",
   "version": "0.0.1",
   "main": "src/index.html",
-  "type": "module",
   "private": true,
+  "sideEffects": false,
   "scripts": {
-    "start:dev": "npx serve -s src/",
-    "start:live": "npx serve -s build/",
+    "build": "npx webpack",
+    "start": "npx webpack-dev-server --open",
+    "watch": "npx webpack --watch",
     "lint:ts": "npx flow",
-    "lint:scss": "npx stylelint \"src/**/*.scss\" --syntax scss",
+    "lint:scss": "npx stylelint 'src/**/*.scss' --syntax scss",
     "test:jest": "npx jest",
     "test:jest:coverage": "npx jest --coverage",
     "project:clean": "rm -rf node_modules"
@@ -25,12 +26,13 @@
     "@types/node": "^12.12.53",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
-    "eslint": "^7.2.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.2.1",
+    "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-flowtype": "^4.7.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "flow-bin": "^0.119.1",
     "flow-typed": "^3.2.1",
@@ -47,6 +49,7 @@
     "tslib": "^2.0.1",
     "typescript": "^3.9.7",
     "webpack": "^5.0.0",
-    "webpack-cli": "^4.0.0"
+    "webpack-cli": "^4.0.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
