--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,10 +1,15 @@
 {
   "recommendations": [
+    // General
     "dbaeumer.vscode-eslint",
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
+    // Project
     "flowtype.flow-for-vscode",
     "mkaufman.htmlhint",
-    "stylelint.vscode-stylelint"
+    "stylelint.vscode-stylelint",
+    // Workflow
+    "christian-kohler.path-intellisense",
+    "msjsdiag.debugger-for-chrome"
   ]
 }
