--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint:scss": "npx stylelint 'src/**/*.scss' --syntax scss",
     "test:jest": "npx jest",
     "test:jest:coverage": "npx jest --coverage",
-    "project:clean": "rm -rf node_modules"
+    "project:clean": "rm -rf node_modules",
+    "debug:ts": "npx tsc --traceResolution >> debug-trace.txt"
   },
   "dependencies": {
     "bootstrap": "^4.5.0"
