--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@typescript-eslint/parser": "^2.34.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.2.1",
-    "eslint": "^7.11.0",
+    "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-flowtype": "^4.7.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.0.0",
     "flow-bin": "^0.119.1",
     "flow-typed": "^3.2.1",
     "htmlhint": "^0.14.1",
