--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -34,7 +34,7 @@
       }
     ],
     "selector-type-no-unknown": null,
-    "string-quotes": "double",
+    "string-quotes": "single",
     "value-keyword-case": [
       "lower",
       {
