--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@types/jest": "^24.9.1",
-    "@types/node": "^12.19.3",
+    "@types/node": "^12.19.5",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.2.1",
-    "eslint": "^7.12.1",
-    "eslint-config-airbnb": "^18.2.0",
+    "copy-webpack-plugin": "^6.3.2",
+    "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.1.5",
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-flowtype": "^4.7.0",
     "eslint-plugin-import": "^2.22.1",
@@ -35,22 +37,26 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "extract-loader": "^5.1.0",
+    "file-loader": "^6.2.0",
     "flow-bin": "^0.119.1",
     "flow-typed": "^3.2.1",
-    "htmlhint": "^0.14.1",
+    "htmlhint": "^0.14.2",
     "node-sass": "^4.14.1",
     "prettier": "^2.1.2",
     "prettier-eslint": "^11.0.0",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
     "serve": "^11.3.2",
-    "stylelint": "^13.6.1",
+    "stylelint": "^13.8.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.18.0",
-    "ts-loader": "^8.0.7",
+    "ts-loader": "^8.0.11",
     "tslib": "^2.0.1",
     "typescript": "^3.9.7",
-    "webpack": "^5.3.2",
-    "webpack-cli": "^4.1.0",
+    "webpack": "^5.6.0",
+    "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
